service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-benefit-client-service
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: docker-hello-world-spring-boot
