ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bva-uat1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:246517980510:certificate/e3f3b14c-ca3f-43ec-8591-39d77c688dcc
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  ingressClassName: "alb"
  rules:
    - host: employee-benefit-uat.blueventuretech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-benefit-client-service
                port:
                  number: 8080
    - host: employee-benefit-uat-api.blueventuretech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-benefit-api-service
                port:
                  number: 8080
